--- a/estilo.css
+++ b/estilo.css
@@ -29,6 +29,16 @@ body {
   font-family: "Fredoka", sans-serif;
   background-color: rgb(252, 252, 101);
   border-radius: 2rem;
+  animation-duration: 2s;
+  animation-name: aparecer;
+}
+@keyframes aparecer {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .logo {
@@ -49,6 +59,7 @@ body {
   color: black;
   font-family: "Fredoka", sans-serif;
   display: block;
+  transition: all 0.5s ease;
 }
 
 .navbar ul a:hover {
@@ -63,6 +74,8 @@ body {
   grid-area: contenido;
   background-color: rgb(252, 252, 158);
   border-radius: 2rem;
+  animation-duration: 5s;
+  animation-name: aparecer;
 }
 .contenidoIndex {
   display: flex;
@@ -96,6 +109,8 @@ body {
   border-radius: 2rem;
   padding: 1rem;
   list-style-type: none;
+  animation-duration: 2s;
+  animation-name: aparecer;
 }
 
 .contenidoProductos {
