--- a/estilo.css
+++ b/estilo.css
@@ -5,25 +5,17 @@
 }
 
 body {
-  background-color: #fff;
+  background-color: #ffc400fa;
+  font-family: "Fredoka", sans-serif;
 }
 
-.contenedor {
-  width: 98%;
-  height: 98%;
-  display: grid;
-  gap: 0.5rem;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr auto 1fr;
-  grid-template-areas:
-    "encabezado encabezado encabezado"
-    "contenido contenido contenido"
-    "footer footer footer";
-  margin: 1rem;
-}
 .container-fluid {
+  border-radius: 2rem;
+}
+.navColor {
   background-color: rgb(252, 252, 101);
 }
+
 @keyframes aparecer {
   0% {
     opacity: 0;
@@ -32,14 +24,23 @@ body {
     opacity: 1;
   }
 }
+
 .contenido {
-  grid-area: contenido;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto 1fr;
+  grid-template-areas:
+    "contenido contenido contenido"
+    "footer footer footer";
+  gap: 2rem;
   background-color: rgb(252, 252, 158);
   border-radius: 2rem;
+  margin: 1rem;
   animation-duration: 5s;
   animation-name: aparecer;
 }
 .contenidoIndex {
+  grid-area: contenido;
   display: flex;
   justify-content: space-between;
   line-height: 1.5;
@@ -54,7 +55,8 @@ body {
   line-height: 1.5;
   border-radius: 2rem;
   font-family: "Fredoka", sans-serif;
-  padding: 1.5rem;
+  margin-right: 1.5rem;
+  text-align: justify;
 }
 
 .img {
@@ -62,20 +64,8 @@ body {
   border-radius: 2rem;
 }
 
-.footer {
-  grid-area: footer;
-  display: flex;
-  justify-content: space-between;
-  font-family: "Fredoka", sans-serif;
-  background-color: rgb(252, 252, 101);
-  border-radius: 2rem;
-  padding: 1rem;
-  list-style-type: none;
-  animation-duration: 2s;
-  animation-name: aparecer;
-}
-
 .contenidoProductos {
+  grid-area: contenido;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -95,6 +85,7 @@ body {
   justify-content: space-around;
   gap: 2rem;
   margin-top: 3rem;
+  border-radius: red solid;
 }
 
 .card {
@@ -111,16 +102,18 @@ body {
   border-radius: 100%;
   padding: 0.5rem;
 }
+
 .contenidoContacto {
   margin: 2rem;
   font-family: "Fredoka", sans-serif;
   line-height: 1.5;
 }
 .contenidoEsp {
-  margin: 1rem;
+  grid-area: contenido;
   font-family: "Fredoka", sans-serif;
   line-height: 1.5;
   display: block;
+  text-align: justify;
 }
 .cardEsp {
   display: flex;
@@ -132,11 +125,30 @@ body {
   height: 20rem;
   border-radius: 2rem;
 }
+.contenidoNosotros-texto {
+  margin-left: 1.5rem;
+}
+
+.footer {
+  grid-area: footer;
+  display: flex;
+  justify-content: space-between;
+  font-family: "Fredoka", sans-serif;
+  background-color: rgb(252, 252, 101);
+  border-radius: 2rem;
+  padding: 1rem;
+  margin: 1rem;
+  list-style-type: none;
+  animation-duration: 2s;
+  animation-name: aparecer;
+}
+
 @media screen and (max-width: 1024px) {
   .contenidoIndex {
     display: block;
   }
 }
+
 @media screen and (max-width: 768px) {
   .contenedor {
     margin: 0.5rem;
