--- a/scss/_contenido.scss
+++ b/scss/_contenido.scss
@@ -1,3 +1,19 @@
+@mixin contenido1 {
+  grid-area: contenido;
+  display: flex;
+  justify-content: space-between;
+  line-height: 1.5;
+  border-radius: 2rem;
+  padding: 1.5rem;
+  p {
+    text-align: justify;
+  }
+  .img {
+    height: 30rem;
+    border-radius: 2rem;
+  }
+}
+
 .contenido {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -15,29 +31,15 @@
 
 .contenidoIndex {
   grid-area: contenido;
+  @include contenido1;
+}
+
+.contenidoIndex-texto {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   line-height: 1.5;
   border-radius: 2rem;
-  font-family: "Fredoka", sans-serif;
-  padding: 1.5rem;
-
-  .contenidoIndex-texto {
-    display: flex;
-    flex-direction: column;
-    line-height: 1.5;
-    border-radius: 2rem;
-    font-family: "Fredoka", sans-serif;
-    margin-right: 1.5rem;
-    p {
-      text-align: justify;
-    }
-  }
-
-  .img {
-    height: 30rem;
-    border-radius: 2rem;
-  }
+  margin-right: 1.5rem;
 }
 
 .contenidoProductos {
@@ -46,7 +48,6 @@
   flex-direction: column;
   align-items: center;
   border-radius: 2rem;
-  font-family: "Fredoka", sans-serif;
   padding: 1rem;
   margin: 1rem;
   h2 {
@@ -77,7 +78,6 @@
 
 .contenidoEsp {
   grid-area: contenido;
-  font-family: "Fredoka", sans-serif;
   line-height: 1.5;
   display: block;
   text-align: justify;
@@ -92,6 +92,11 @@
     height: 20rem;
     border-radius: 2rem;
   }
+}
+
+.contenidoNosotros {
+  grid-area: contenido;
+  @include contenido1;
 }
 
 .contenidoNosotros-texto {
