--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,18 +1,19 @@
+@mixin negrita {
+  font-weight: bold;
+}
+
 .footer {
   grid-area: footer;
-  display: flex;
-  justify-content: space-between;
-  font-family: "Fredoka", sans-serif;
   background-color: $amarillofuerte;
   border-radius: 2rem;
   padding: 1rem;
   margin: 1rem;
-  list-style-type: none;
   animation-duration: 2s;
   animation-name: aparecer;
-  h4 {
-    font-weight: 800;
+  li{
+    @include negrita;
   }
+ 
 }
 
 .footerDerechos {
