--- a/css/estilo.css
+++ b/css/estilo.css
@@ -122,6 +122,13 @@ body {
   padding: 0.5rem;
 }
 
+.card:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
 .contenidoEsp {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
@@ -129,7 +136,6 @@ body {
   grid-area: contenido;
   line-height: 1.5;
   display: block;
-  text-align: justify;
 }
 
 .cardEsp {
@@ -141,6 +147,9 @@ body {
           justify-content: space-between;
   gap: 1rem;
   padding: 1rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .cardEsp img {
